Ajustes de observacion

--- a/trivia.html
+++ b/trivia.html
@@ -14,6 +14,7 @@
   <main class="stage">
     <img class="logo" src="./images/logoblue.png" alt="Logo Trivia" />
 
+
     <!-- Botones de bloques -->
     <nav class="blocks" aria-label="Selecciona un bloque">
       <button class="block-btn" type="button" data-block="1"><span>BLOQUE 1</span></button>
@@ -22,6 +23,13 @@
       <button class="block-btn" type="button" data-block="4"><span>BLOQUE 4</span></button>
       <button class="block-btn" type="button" data-block="5"><span>BLOQUE 5</span></button>
     </nav>
+<div class="btnback" onclick="window.location.href='index.html'">
+      <img 
+      class="btn_back"
+      src="./images/backbtncian.png"
+      >
+    </div>
+
   </main>
   <script src="./js/trivia.js"></script>
 
