--- a/trivia.html
+++ b/trivia.html
@@ -26,7 +26,7 @@
 <div class="btnback" onclick="window.location.href='index.html'">
       <img 
       class="btn_back"
-      src="./images/backbtncian.png"
+      src="./images/home.png"
       >
     </div>
 
