--- a/lose.html
+++ b/lose.html
@@ -76,9 +76,10 @@
 <div class="overlay" aria-hidden="true"></div>
 
 <main class="panel" role="main" aria-labelledby="title" aria-describedby="desc">
-  <h1 id="title">Sigue intentando</h1>
-  <p id="desc">Cada intento te acerca más. ¡Tú puedes! Volviendo en <span class="count" id="count">5</span>…<br/>Toca cualquier parte para ir ahora.</p>
+  <h1 id="title">!Sigue intentando¡</h1>
+  <p id="desc" style="opacity: 0;"><span class="count" id="count" style="opacity: 0;"></span><br/></p>
 </main>
+
 
 <script>
 (function(){
