--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Bienvenida</title>
+  <title>Roca App Ica</title>
   <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body class="welcome">
